@@ -1,3 +1,6 @@
+Disable code to avoid copies when installing from a file: URL or
+local path, as it broke installation of source sets.
+
 Deal with pexpect 4.3.1 requiring delayafterclose and
 delayafterterminate to be set in two different places
 (https://github.com/pexpect/pexpect/issues/462).
